# claude-codex-queue

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install-autostart.ps1  install-desktop-shortcut.ps1  pyproject.toml  start-claude-codex-queue-hidden.vbs  start-claude-codex-queue.cmd  start-claude-codex-queue.ps1  start-claude-queue.cmd  start-claude-queue.ps1  start-visual.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
claude_codex_queue/: __init__.py  __main__.py  web.py
claude_vscode_queue/: __init__.py  app.py  web.py
claude_vscode_queue/assets/: __init__.py
docs/: ARCHITECTURE.md
tests/: test_account_sync.py  test_app.py
tools/: capture_marketing_assets.py  make_icon.py
