[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-vscode-queue"
version = "0.1.0"
description = "Local queue and auto-continue runner for Claude Code sessions in VS Code and Claude Desktop."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Claude VS Code Queue contributors" }
]
keywords = ["claude-code", "queue", "vscode", "automation", "rate-limit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ravhello/claude-vscode-queue"
Issues = "https://github.com/ravhello/claude-vscode-queue/issues"

[project.scripts]
claude-vscode-queue = "claude_vscode_queue.app:main"
claude-vscode-queue-web = "claude_vscode_queue.web:main"

[tool.setuptools]
packages = ["claude_vscode_queue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
