[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-queue"
version = "0.2.7"
description = "Local queue and auto-continue runner for Claude Code sessions and Codex App tasks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Claude + Codex Queue contributors" }
]
keywords = [
  "ai-agents",
  "anthropic",
  "automation",
  "claude",
  "claude-code",
  "codex",
  "developer-tools",
  "openai",
  "queue",
  "rate-limit",
  "wsl",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ravhello/claude-codex-queue"
Issues = "https://github.com/ravhello/claude-codex-queue/issues"
Changelog = "https://github.com/ravhello/claude-codex-queue/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ravhello/claude-codex-queue/blob/main/docs/ARCHITECTURE.md"
Discussions = "https://github.com/ravhello/claude-codex-queue/discussions"
Releases = "https://github.com/ravhello/claude-codex-queue/releases"
Source = "https://github.com/ravhello/claude-codex-queue"

[project.scripts]
claude-codex-queue = "claude_vscode_queue.app:main"
claude-codex-queue-web = "claude_vscode_queue.web:main"
claude-vscode-queue = "claude_vscode_queue.app:main"
claude-vscode-queue-web = "claude_vscode_queue.web:main"

[tool.setuptools]
packages = ["claude_codex_queue", "claude_vscode_queue", "claude_vscode_queue.assets"]

[tool.setuptools.package-data]
claude_vscode_queue = ["assets/*.ico", "assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
